Fix static asset paths for Cloudflare Pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700;800&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="./style.css?v=20260211-1" />
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   <div class="site-shell">
     <header class="nav fade-up" style="--delay: 90ms;">
       <a class="brand" href="#">
-        <img class="logo" src="/logo.png" alt="Velo logo" />
+        <img class="logo" src="./logo.png?v=20260211-1" alt="Velo logo" />
         <span>Velo</span>
       </a>
       <a class="nav-link" href="mailto:hello@velo-app.net">Start a pilot</a>
@@ -66,7 +66,7 @@
 
       <section class="split reveal">
         <div class="metric-card">
-          <img class="metric-logo" src="/logo.png" alt="Velo mark" />
+          <img class="metric-logo" src="./logo.png?v=20260211-1" alt="Velo mark" />
           <p class="metric-kicker">Execution control</p>
           <p class="metric-title">One place to import, email, track KPI performance, and follow up.</p>
           <div class="metric-row">
